--- a/paper/open_science.bib
+++ b/paper/open_science.bib
@@ -23,7 +23,7 @@ pages = {1-6},
 @Article{Stodden2013:PLOS1,
 author = {Stodden, Victoria and Guo, Peixuan and Ma, Zhaokun},
 title = {Toward Reproducible Computational Research: Empirical Anaysis of Data and Code Policy Adoption by Journals},
-journal = {PLOS ONE},
+journal = {PLoS ONE},
 year = {2013},
 volume = {8},
 number = {6},
@@ -348,4 +348,31 @@ year = {2009},
 volume = {11},
 number = {1},
 pages = {35-40},
+}
+
+@article{Alsheikh11:PLOS,
+author = {Alsheikh-Ali, Alawi A. and Qureshi, Waqas and Al-Mallah, Mouaz H. and Ioannidis, John P.A.},
+title = {Public Availability of Published Research Data in High-Impact Journals},
+journal = {PLoS ONE},
+year = {2011},
+volume = {6},
+number = {9},
+pages = {1-4},
+}
+
+@Misc{Swan10:study,
+author = {Swan, Alma},
+title = {The Open Access citation advantage: Studies and results to date},
+howpublished = {\url{http://eprints.soton.ac.uk/id/eprint/268516}},
+year = {2010},
+}
+
+@article{McCabe14:EI,
+author = {McCabe, Mark J. and Snyder, Christopher M.},
+title = {Identifying the Effect of Open Access on Citations Using a Panel of Science Journals},
+journal = {Economic Inquiry},
+year = {2014},
+volume = {52},
+number = {4},
+pages = {1284-1300},
 }
