--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -48,20 +48,22 @@ $^2$ \emph{\small Filmuniversität Babelsberg KONRAD WOLF}}
 % ================================================================================
 \section*{The Scientific Method} \label{sec:intro} 
 
-Before discussing the Open Science approach in detail its worthwhile to review the
-foundations of the scientific method underlying research results. It may be defined 
-as \emph{'A method of procedure that has characterized natural science since the 17th 
+Before introducing the open science approach in detail its worthwhile to review the
+foundations of the scientific method. It may be referred to  as 
+\emph{'A method of procedure that has characterized natural science since the 17th 
 century, consisting in systematic observation, measurement, and experiment, and the 
-formulation, testing, and modification of hypotheses.'}~\cite{scientific_method:OXD}.
-The reproducibility of results is one of the main principles of the scientific method. 
+formulation, testing, and modification of hypotheses.'}~\cite{scientific_method:OXD}. 
+Science builds upon a set of well accepted methods which are commonly believed to
+ensure above formulated principles. Besides these, the reproducibility of results is 
+one of the cornerstones of the scientific method. 
 It may be defined as \emph{'Reproducibility is the ability of an entire analysis of 
 an experiment or study to be duplicated, either by the same researcher or by someone 
 else working independently, whereas reproducing an experiment is called replicating 
 it.'}~\cite{Leek15:PNAS}. 
 The irreproducibility of a wide range of scientific results has drawn significant 
 attention in the last decade~\cite{Borgwardt:Book,retraction:WWW,ioannidis05:PLOS, open15:AAAS, chalmers09:OG, freedman15:PLOS, howells14:Nature}. 
-In order to track down the problem the application areas of the scientific method have been
-classified into the three following branches~\cite{Donoho:CSE, Stodden2014:talk}:
+In order to track down the problem of irreproducibility the application areas of 
+the scientific method have been classified into three branches~\cite{Donoho:CSE,Stodden2014:talk}:
 \begin{enumerate}
 \item deductive
 \item empirical
@@ -69,19 +71,18 @@ classified into the three following branches~\cite{Donoho:CSE, Stodden2014:talk}
 \end{enumerate}
 The deductive branch covers results derived e.g. by formal logic and mathematics, the empirical
 branch e.g. statistical analysis of controlled experiments. The first two are traditional branches, 
-while the last one is a potentially new branch. It covers results derived by large-scale simulations
+while the last one is considered as a potentially novel branch. It covers results derived by large-scale simulations
 and data-driven computational science. The measures that have to be taken to ensure reproducibilitly
 in the traditional are quite well known. This does not hold for the third, computational, branch.
 
 Besides problems in the research methods themselves, results are often not reproducible since 
 necessary supplementary material as protocols, data and implementations are not available. In 
-many cases only the published results are available to other researchers. Open Science 
-focuses on the ease of access of scientific data and therefore supports the ease of 
-reproducibility.
+many cases only the published results are accessible to other researchers. Open science 
+focuses on the ease of access of scientific data underlying research and therefore supports the ease of reproducibility.
 
 An alternative view on the problem of reproducibility is given by asking 
 \textbf{who should benefit from my research}? Potential answers to this question ordered by 
-the degree of required reproducibilitly are:
+the degree of transparency are:
 \begin{itemize}
 \item[$\square$] myself
 \item[$\square$] my future self
@@ -90,6 +91,9 @@ the degree of required reproducibilitly are:
 \item[$\square$] all people in the world
 \item[$\square$] science itself
 \end{itemize}
+While research conducted for myself does not require any transparency in terms
+of underlying data, research performed for the sake of science itself should be
+as open as possible to encourage scientific advancement.
 
 
 % ================================================================================
