--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -99,13 +99,13 @@ as open as possible to encourage scientific advancement.
 % ================================================================================
 \section*{Open Science} \label{sec:open_science} 
 
-Open Science bases on the general demand for socialization of knowledge. More specifically, 
+Open science follows the general demand for socialization of knowledge. More specifically, 
 it aims at making the research process transparent on all levels. The advent of scientific 
 journals can be seen as a first step towards openness. Open Science has been discussed on
 a broad level in the last decade. However the exact meaning of the term is still not fully 
 settled. Many measures are discussed to achieve transparency in the research process~\cite{Pontika15:ACM,Reproducibility15:AMS,Albagli15:Book,Vrana15:MIPRO,Kraker11:TEL}. 
-We review the most common elements in the following, followed by application examples in
-the context of a listening experiment.
+We review the most common elements of open science in the following, followed by application 
+examples in the context of a listening experiment.
 
 
 % ................................................................................
@@ -115,25 +115,32 @@ The various measures used to gain open and transparent science may be classified
 follows:
 \begin{itemize}
 \item \textbf{Open Source}\\
-Availability of source code of implementations used in the research process, e.g. for numerical simulations.
+Availability of source code of the implementations used in the research process, e.g. 
+for numerical simulations, statistical analyses and graphical user interfaces.
 %
 \item \textbf{Open (Science) Data}\\
-Availability of the data underlying the research, whereas data does not only refer to electronic resources but also
-to protocols, samples, etc.
+Availability of the data underlying the research, whereas data does not only refer 
+to electronic resources but also to protocols, material samples, etc. For instance
+impulse responses, anechoic stimuli and anthropomorphic data.
 %
 \item \textbf{Open Access}\\
 Free access to published research output, e.g. articles.
 %
 \item \textbf{Open Methodology}\\
-Detailed documentation of the methodology underlying the research.
+Detailed documentation of the methodology underlying the research. For instant hypothesis 
+and experimental procedure.
 %
 \item \textbf{Open Notebook Science}\\
-Availability of the primary record of research results, e.g. laboratory notebooks or detailed mathematical derivations.
+Availability of the primary record of research results, e.g. laboratory notebooks or 
+detailed mathematical derivations.
 %
 \item \textbf{Open Educational Resources}\\
-Free accessible resources for teaching, learning and research.
+Freely accessible resources for teaching, learning and research. For instance textbooks, slides and
+examples.
+%
 \item \textbf{Open Peer Review}~\cite{Ford13:LFP}\\
-Refers to various transparency in the peer review process, e.g. crowdsourced review.
+Various measures to increase the transparency of the peer review process, e.g. availability of 
+review comments and crowdsourced review.
 \end{itemize}
 
 
