--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -155,31 +155,33 @@ following stages:
 \item \textbf{Idea}\\
 The results of a preceding experiment or a discussion among colleagues is often the advent 
 for new research projects. These ideas reveal for instance the motivation behind the research. 
-Publishing the ideas as \underline{Open Notebook Science} makes them accessible to the public.
+Publishing the ideas in the sake of \underline{Open Notebook Science} makes them accessible 
+to the public.
 %
 \item \textbf{Design of Experiment}\\
 The experiment is designed on basis of the initial idea. This involves for instance the formulation 
-of a hypothesis, the definition of a procedure, stimuli and subjects. \underline{Open Methodology} makes
-the design available.
+of a hypothesis, the definition of an experimental procedure, stimuli and subjects. \underline{Open Methodology} 
+makes the design available.
 %
 \item\textbf{Computation}\\
 The generation of stimuli may involve mathematical deviations for numerical simulations, the 
-implementation of signal processing, control logic and graphical user interface, as well as input data. These
-can be made available in the sake of \underline{Open Notebook Science}, \underline{Open Data} and \underline{Open Source}.
+implementation of signal processing, control logic and graphical user interface, as well as data like impulse responses and anechoic recordings. These
+can be made available following \underline{Open Notebook Science}, \underline{Open Data} and \underline{Open Source}.
 %
 \item \textbf{Experiment}\\
-The experiment is then conducted in the next step and the responses are collected from the test subject. This
-constitutes raw data which is processed later. The data can be published as \underline{Open Data} as long as
-no privacy issues are raised.
+In the next step the experiment is conducted. Here the responses are collected from the test subject potentially 
+together with other data like head orientation. This constitutes raw data which is processed later in the analysis stage. 
+The data can be published as \underline{Open Data} as long as no privacy issues are raised.
 %
 \item \textbf{Analysis}\\
 The statistical analysis of the raw data is the basis of the generalization of the individual results. This may
-involve the anonymization and outlier removal as first steps. The analysis can be published using the elements
+involve the anonymization and outlier removal as first steps. The analysis can be made transparent using the elements
 \underline{Open Methodology}, \underline{Open Source} and \underline{Open Data}.
 %
 \item \textbf{Manuscript}\\
-The design and the results of the perceptual study are compiled into a manuscript for publication. It is composed
-from text, references and visualization of the analyzed results. The manuscript may be published as \underline{Open Access}.
+The design and the results of the perceptual study are compiled into a manuscript. It is composed
+from text, references and visualizations of the analyzed results. The manuscript may be published 
+as \underline{Open Access}.
 %
 \item \textbf{Pre-Publication Peer Review}\\
 The publication process typically involves some kind of quality assessment. The manuscript is evaluated by
