--- a/paper/open_science.bib
+++ b/paper/open_science.bib
@@ -85,7 +85,7 @@ howpublished = {\url{https://en.wikipedia.org/wiki/SharePoint}},
 
 @Misc{H2020_FAIR:ERC,
 author = {{European Research Commission}},
-title = {H2020 Programme: Guidelines of FAIR Data Management in Horizon 2020},
+title = {H2020 Programme: Guidelines of {FAIR} Data Management in Horizon 2020},
 note = {Version 3.0, 26.7.2016},
 }
 
@@ -104,7 +104,7 @@ note = {Accessed 10.11.2016},
 
 @Misc{HRK_FDM:WWW,
 author = {Hochschulrektorenkonferenz},
-title = {Management von Forschungsdaten - eine zentrale strategische Herausforderung für Hochschulleitungen},
+title = {Management von {F}orschungsdaten - eine zentrale strategische {H}erausforderung für {H}ochschulleitungen},
 howpublished = {\url{https://www.hrk.de/positionen/gesamtliste-beschluesse/position/convention/management-von-forschungsdaten-eine-zentrale-strategische-herausforderung-fuer-hochschulleitungen}},
 note = {Verabschiedet am 13.5.2014},
 }
@@ -317,7 +317,7 @@ year = {2015},
 }
 
 @article{Kraker11:TEL,
-  title={The case for an open open science in technology enhanced learning},
+  title={The case for an open science in technology enhanced learning},
   author={Kraker, Peter and Leony, Derick and Reinhardt, Wolfgang and Beham, Günter},
   journal={International Journal Technology of Enhanced Learning},
   volume={3},
