--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -34,8 +34,8 @@ Towards Open Science in Acoustics: Foundations and Best Practices}}
 % Hier die Namen und Daten der beteiligten Autoren eintragen
 \author{
 Sascha Spors$^1$, Matthias Geier$^1$ and Hagen Wierstorf$^2$\\
-$^1$ \emph{\small Institute of Communications Engineering, University of Rostock, Germany, Email: sascha.spors@uni-rostock.de}\\
-$^2$ \emph{\small Filmuniversität Babelsberg KONRAD WOLF}} 
+$^1$\emph{\small Institute of Communications Engineering, University of Rostock, Germany, Email: Sascha.Spors@uni-rostock.de}\\
+$^2$\emph{\small Filmuniversität Babelsberg KONRAD WOLF}} 
 
 
 % ================================================================================
@@ -185,20 +185,20 @@ as \underline{Open Access}.
 %
 \item \textbf{Pre-Publication Peer Review}\\
 The publication process typically involves some kind of quality assessment. The manuscript is evaluated by
-independent researchers who provide ratings and suggestions for improvement. If accepted the manuscript is
-the revised on this basis. The peer review process can be made transparent using the elements of \underline{Open Peer Review}.
+independent reviewers who provide ratings and suggestions for improvement. If accepted the manuscript is
+the revised on this basis. The peer review process can be made transparent using \underline{Open Peer Review}.
 %
 \item \textbf{Publication}\\
 After successful incorporation of comments from the pre-publication peer review the manuscript is ready for
 publication. It may be accompanied by supplementary material in order to improve the ease of reproducibility. In the
-case of conference papers a presentation may be given which contains other or additional. The elements involved
+case of conference papers a presentation may be given which contains other or additional material. The elements involved
 for publication are \underline{Open Access}, \underline{Open Source} and \underline{Open Data}.
 %
 \item \textbf{Aftermath}\\
 After publication, the presented research may be replicated by others. Post-publication
-review will rate the significance of the research. Feedback from this
-may require to publish an errata or revise the underlying data and code. Finally open questions
-may bring up ideas for the next research project.
+review will consider the correctness and relevance of the research. Feedback from this
+may require to publish an errata or revise the underlying data and code. Finally open 
+questions may bring up ideas for the next research project.
 \end{enumerate}
 
 
@@ -227,7 +227,7 @@ The systematic management of research data is an important prerequisite for open
 reproducible science. This covers the internal as well as public handling of data, whereas
 the term research data is not restricted to electronic resources. The following principles
 for research data management have been compiled from the recommendations given 
-in~\cite{DFG_GWP:Book,HRK_FDM:WWW,Stodden2014:JORS,H2020_FAIR:ERC}
+in~\cite{DFG_GWP:Book,HRK_FDM:WWW,Stodden2014:JORS,H2020_FAIR:ERC}:
 \begin{itemize}
 \item develop a comprehensive data management plan
 \item use workflow tracking in the research process
@@ -235,11 +235,11 @@ in~\cite{DFG_GWP:Book,HRK_FDM:WWW,Stodden2014:JORS,H2020_FAIR:ERC}
 \item apply open licensing models
 \item offer training and qualification
 \end{itemize}
-The data management should document the data raised and processed, its handling and
+The data management plan should document the data raised and processed, its handling and
 archival. The use of workflow tracking (e.g. SVN, git) makes the research process transparent 
 and allows to discover for instance the source of problems. The FAIR policy in conjunction with
 open licensing models promotes the re-use of published data. Training and qualification is an
-essential cornerstone of an advanced data management strategy. It should highlight the importance
+essential cornerstone of a decent data management strategy. It should highlight the importance
 of data management and should introduce the data management plan as well as the tools used for
 its realization.
 
@@ -258,33 +258,35 @@ actual state with respect to data publications up to the impact of open access
 publications. The current policy of journals has for instance been evaluated in~\cite{Stodden2013:PLOS1,Alsheikh11:PLOS}. The studies reveal that so far there is 
 no common call for sharing code and data, and that the requirements are rather 
 homogeneous. The offer to deposit underlying data and code is taken only by a minority
-of authors.
+of authors. However, the situation has improved considerably in the past years.
 
 The barriers and incentives of open source and data publications accompanying 
-publications have been raised in a questionnaire within the machine learning 
-community~\cite{}.
+scientific publications have been raised in a questionnaire within the machine 
+learning community~\cite{}.
 
 Various studies have investigated the presumed advantage in terms of citations of
 open access publications, e.g.~\cite{Swan10:study,McCabe14:EI}. An clear advantage 
-could be shown in most cases and no advantage in rare cases.
+could be shown in most cases and less to no advantage in rare cases.
+
 
 % ................................................................................
 \paragraph*{Personal Experience}
 
-Besides using open toolboxes and datasets our own expertise with open science began 
-with the public release of the SoundScape Renderer (SSR)~\cite{Geier07:DEGA} in 
+Besides using open toolboxes and datasets, our own expertise with open science began 
+with the open source release of the SoundScape Renderer (SSR)~\cite{Geier07:DEGA} in 
 2010\footnote{\url{https://github.com/SoundScapeRenderer}}. Since then various software toolboxes, 
 datasets, open access papers and open educational resources have been 
 published\footnote{\url{https://github.com/spatialaudio}}\footnote{\url{https://github.com/sfstoolbox}}. 
-We use Redmine, SVN and git for internal data management. Public releases are mainly
-done on github and referenced by zenodo if required. Challenges were the initial
+We use Redmine~\footnote{\url{http://www.redmine.org/}}, SVN and git for internal data management. Public releases are mainly
+available on github and referenced by zenodo\footnote{\url{https://zenodo.org/}} if required. Challenges were the initial
 effort to get familiar with the workflow and license models. We furthermore did not find
 a convenient solution for version tracking of large databases, for instance room 
 acoustic measurements. A clear benefit is the need for documentation, clean-up and internal
 discussion before releasing data to the public. While this effort seems to be undesirable at
-first glance, it turns out to safe a lot of effort later on. The feedback from the community
-is very positive and a number of bugs have been found. It can be expected that publicity 
-released scientific code and data contains less bugs than we used internally only. 
+first glance, it turns out to safe a lot of work later on. The feedback from the community
+is very positive and a number of bugs have been reported. We expect that our publicity 
+released scientific code and data contains less bugs than if we would have used it 
+internally only. 
 
 A common concern often raised by others is the misuse of openly published data by others, 
 for instance for commercial activities. So far we have not seen any misuse of our
@@ -297,19 +299,25 @@ We have introduced the concept of open science and discussed its application in 
 field of acoustics. The reproducibility of results is an essential cornerstone of
 the scientific method. Open science by itself does not ensure the ease of reproducibility of
 published results. For instance the accessibility of code for a numeric simulation without
-proper documentation can be very limited and may lead to irreproducibility of the simulation results. The FAIR policy~\cite{H2020_FAIR:ERC} (\emph{make data findable, accessible, interoperable and reusable}) of the EC is a first step towards quality standards for 
+proper documentation can be very limited and may lead to irreproducibility of the simulation results. 
+The FAIR policy~\cite{H2020_FAIR:ERC} -- \emph{make data findable, accessible, interoperable and reusable} -- 
+of the European Commission is a first step towards quality standards for 
 data publications. Other initiatives define minimum quality standards for data publications 
 or have instantiated a peer-review for the reproducibility of published findings~\cite{}.  
 
-Training and qualification has to be understood as an integral part of research data management and open science. It should convey its foundations as well as common tools and workflows.
+Training and qualification has to be understood as an integral part of research data 
+management and open science. It should convey its foundations as well as common tools 
+and workflows.
 
 The current movement towards open science is still in a phase of development and 
 consolidation. The scientific ecosystem, for instance journals and funding organizations, 
-has taken up the topic in order to improve the management of research data and the reproducibility of scientific findings. However, at the current state most institutional evaluation measures do not account for an engagement in open science. This is strongly 
-linked to the problem of personal attribution when contributing to public developments and datasets. The scientific track record nowadays builds heavily on such measures as 
-citation index and third party funding which potentially contradict the involvement into 
-open science.
-
+has taken up the topic in order to improve the management of research data and the 
+reproducibility of scientific findings. However, at the current state most institutional 
+evaluation measures do not account for an engagement in open science. This is strongly 
+linked to the problem of personal attribution when contributing to open source and open 
+datasets. The scientific track record nowadays builds heavily on such measures as 
+citation index and third party funding which potentially contradict the deep involvement 
+into open science.
 
 %================================================================================
 % Bibliography
