More publishers for Open Content guide

--- a/paper/open_science.bib
+++ b/paper/open_science.bib
@@ -336,7 +336,7 @@ year = {2015},
 @Book{Kreuzer14:Book,
 author = {Kreuzer, Till},
 title = {Open Content  - A Practical Guide to Using Creative Commons Licences},
-publisher = {German Commission for UNESCO},
+publisher = {Wikimedia Deutschland, the German Commission for UNESCO and the North Rhine-Westphalian Library Service Centre (hbz)},
 year = {2014},
 }
 
