--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -73,7 +73,7 @@ The deductive branch covers results derived e.g. by formal logic and mathematics
 branch e.g. statistical analysis of controlled experiments. The first two are traditional branches, 
 while the last one is considered as a potentially novel branch. It covers results derived by large-scale simulations
 and data-driven computational science. The measures that have to be taken to ensure reproducibilitly
-in the traditional are quite well known. This does not hold for the third, computational, branch.
+in the traditional branches are quite well known. This does not hold for the third, computational, branch.
 
 Besides problems in the research methods themselves, results are often not reproducible since 
 necessary supplementary material as protocols, data and implementations are not available. In 
@@ -277,7 +277,7 @@ with the open source release of the SoundScape Renderer (SSR)~\cite{Geier07:DEGA
 2010\footnote{\url{https://github.com/SoundScapeRenderer}}. Since then various software toolboxes, 
 datasets, open access papers and open educational resources have been 
 published\footnote{\url{https://github.com/spatialaudio}}\footnote{\url{https://github.com/sfstoolbox}}. 
-We use Redmine~\footnote{\url{http://www.redmine.org/}}, SVN and git for internal data management. Public releases are mainly
+We use Redmine\footnote{\url{http://www.redmine.org/}}, SVN and git for internal data management. Public releases are mainly
 available on github and referenced by zenodo\footnote{\url{https://zenodo.org/}} if required. Challenges were the initial
 effort to get familiar with the workflow and license models. We furthermore did not find
 a convenient solution for version tracking of large databases, for instance room 
