Restructure conclusion section

--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -248,10 +248,7 @@ of funding schemes.
 
 
 % ================================================================================
-\section*{Conclusions} \label{sec:conclusions} 
-
-% ................................................................................
-\paragraph*{Empirical Analysis of Open Science}
+\section*{Empirical Analysis of Open Science} \label{sec:empirical_analysis}
 
 Open science has been evaluated in a number of empirical studies. This covers the
 actual state with respect to data publications up to the impact of open access 
@@ -269,8 +266,8 @@ open access publications, e.g.~\cite{Swan10:study,McCabe14:EI}. An clear advanta
 could be shown in most cases and less to no advantage in rare cases.
 
 
-% ................................................................................
-\paragraph*{Personal Experience}
+% ================================================================================
+\section*{Personal Experience} \label{sec:personal_experience}
 
 Besides using open toolboxes and datasets, our own expertise with open science began 
 with the open source release of the SoundScape Renderer (SSR)~\cite{Geier07:DEGA} in 
@@ -292,8 +289,8 @@ A common concern often raised by others is the misuse of openly published data b
 for instance for commercial activities. So far we have not seen any misuse of our
 materials and hence cannot confirm this concern.
 
-% ................................................................................
-\paragraph*{Conclusions}
+% ================================================================================
+\section*{Conclusions} \label{sec:conclusions}
 
 We have introduced the concept of open science and discussed its application in the
 field of acoustics. The reproducibility of results is an essential cornerstone of
