Some changes to the text about licenses

--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -205,19 +205,27 @@ questions may bring up ideas for the next research project.
 % ================================================================================
 \section*{Copyright and Licenses} \label{sec:copyright}
 
-Licenses are an important aspect of open science. Scientific data that is made 
-available to the public has to be accompanied by a clear license statement. Otherwise
-the situation concerning copyright and reuse is unclear. The legal implications are
-rather complex, hard to oversee and country dependent in this case. The community offers
-a wide variety of licensing frameworks which are of use for open science. In general different 
-licenses are used for data, text, images, artwork and code. For the former the family of 
-creative commons (CC) licenses~\cite{CC} is a good choice~\cite{Kreuzer14:Book}. For the
-latter various license models are used, for instance the GNU General Public License (GPL), 
-BSD or MIT License, to name a few.
+Licenses are an important aspect of open science. Scientific code and data that is made 
+available to the public should be accompanied by a clear license statement. Otherwise,
+due to copyright laws, re-distribution and re-use is most likely forbidden.
+The exact legal implications are
+rather complex, hard to oversee and depend on the country whose copyright laws apply.
 
-The chosen license model should be as less restrictive as possible in order to promote the
-re-use. In order to aid in the selection of an appropriate licensing strategy, recommendations
+In order to explicitly allow re-distribution and re-use -- under well-defined conditions -- there are
+a variety of licensing frameworks which can be used for open science.
+For text, images, artwork and similar works, the family of 
+creative commons (CC) licenses~\cite{CC} is a good choice~\cite{Kreuzer14:Book},
+especially the rather permissive variant CC\,BY and the more restrictive variant CC\,BY\,SA.
+When publishing source code, one of the many available open source licenses should be used.
+Examples are the permissive BSD or MIT licenses and the more restrictive
+GNU General Public License (GPL), just to name a few.
+
+To promote wide-spread legal re-use of research results, a permissive license should be preferred.
+There are even tools which allow authors to waive all their rights,
+as far as legally possible, most notably CC0.
+In order to aid in the selection of an appropriate licensing strategy, recommendations
 for open science have been given~\cite{Stodden09:CSE,}.
+
 
 
 % ================================================================================
